--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,4 +2,25 @@
 @tailwind components;
 @tailwind utilities;
 
+/* swiper */
+swiper-container {
+  width: 100%;
+  height: 100%;
+}
 
+swiper-slide {
+  text-align: center;
+  font-size: 0px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+/* //swiper */
